# service-length

./: pyproject.toml  requirements.txt
servlen/: manage.py
servlen/mainlength/: apps.py  models.py  views.py
servlen/mainlength/migrations/: 0001_initial.py
servlen/mainlength/templates/: index.html
servlen/serv_len/: asgi.py  settings.py  urls.py  wsgi.py
